# bsc-mempool-monitor

./: Cargo.toml  QUICKSTART.md  README.md  installDependencies.sh  notes  start.sh  testnetStart.sh
contracts/: Frontrunner.sol  deploy.js  hardhat.config.js  package-lock.json  package.json
fullnode/: config.toml  downloadGeth.sh  logViewer.sh  prunedSnapshotSetup.sh  startFullnode2.sh  startTestnode.sh  stopGeth.sh  testNodeSyncStatus.sh
fullnode/gethConfigs/: erigon-logrotate  logrotatesetup.sh  startErigon.sh  startFullnode.sh  startFullnode2.sh  startTestnode.sh
fullnode/gethConfigs/mainnet/: erigon-config.toml
fullnode/gethConfigs/testnet/: config.toml
fullnode/testnet/: config.toml
scripts/: bsc-network-benchmark.sh
src/: config.rs  conversions.rs  lib.rs  main.rs  mempool_monitor.rs  transaction_stats.rs
src/frontrunner/: mod.rs
verilog/: Makefile  setupAWS-condensed.sh  setupAWS.sh
verilog/scripts/: build.tcl  deploy.sh  flash.tcl  program.tcl
verilog/src/: mempoolMonitor.v  networkInterface.v  networkModule.md  transactionParser.v
