[package]
name = "bsc-mempool-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
clap = "2.33"
chrono = "0.4"
eyre = "0.6"
hex = "0.4"
rayon = "1.5"
crossbeam-channel = "0.5"
num_cpus = "1.13"